fixing the overflowing pictures

--- a/styles.css
+++ b/styles.css
@@ -223,16 +223,19 @@ hr{
     justify-content: baseline;
     text-align: center;
     background-image: url(/images/bgk-header.png);
-    height: 30vh;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    padding-top: 3rem;
+    padding-bottom:3rem;
+    min-height: 400px;
 }
 
-.team div.container{
+.team .container{
     text-align: center;
-    display: flex;  
-    align-content:space-between;
+    display: block;  
+     
+     
 }
 
 .team h3 {
@@ -253,29 +256,35 @@ hr{
 .teamPictures {
     display:flex;
     justify-content: space-around;
-    border: 3px solid yellow;
+   
+    margin-right:17rem;
+    margin-left:17rem;
+    border:3px solid yellow;
 }
 
-.teamPictures img{
-    max-width: 20rem;
-    max-height: 20rem;
+.teamPictures img {
+  
      
 }
 
 .framesTeam{
-   padding-left:1rem;
-   padding-right:1rem;
+    border:3px solid grey;
+padding:0 0 0 0;
+margin:2rem 2rem;
 }
 
 .framesTeam > h4{
     color:white;
-    border: 3px solid red;
-    max-height: 430px;
+     
+     
 }
 
 #team-button {
     align-self:center;
     justify-content: space-around;
+    border: 1px solid #00e0d0;
+    font-family: "HammersmithOne-Regular" sans-serif;
+    font-size:1.5em;
 }
 
 .contact-client{
